@@ -51,7 +51,7 @@ class FL_EXPORT Fl_Value_Output : public Fl_Valuator {
   Fl_Font textfont_;
   Fl_Fontsize textsize_;
   uchar soft_;
-  unsigned textcolor_;
+  Fl_Color textcolor_;
 
 protected:
   void draw();
@@ -83,9 +83,9 @@ public:
   Fl_Fontsize textsize() const {return textsize_;}
   void textsize(Fl_Fontsize s) {textsize_ = s;}
   /**    Sets the color of the text in the value box.  */
-  Fl_Color textcolor() const {return (Fl_Color)textcolor_;}
+  Fl_Color textcolor() const {return textcolor_;}
   /**    Gets the color of the text in the value box.  */
-  void textcolor(unsigned s) {textcolor_ = s;}
+  void textcolor(Fl_Color s) {textcolor_ = s;}
 };
 
 #endif
